fixed rocket clipping navbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2889,7 +2889,7 @@ input, select, textarea {
 		@keyframes flyIn {
 			0% {
 				opacity: 1;
-			  	transform: translateX(-1800%) translateY(-200%) rotate(90deg);
+			  	transform: translateX(-1700%) translateY(-200%) rotate(90deg);
 			}
 			100% {
 				opacity: 1;
